--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 { text: 'SISTEMA DE PORTALES DE OBLIGACIONES DE TRANSPARENCIA (SIPOT)', bold: true, newLine: true },
                 { text: 'Información Confidencial', bold: false, newLine: true }, { text: '', bold: false, newLine: true },
                 { text: 'Eliminado: ', bold: true }, { text: `${count} datos personales. `, bold: false },
-                { text: 'Resolución del Comité: ', bold: true }, { text: 'Resolución CT/ALIMENTACIÓN/---/2025 ', bold: false },
+                { text: 'Resolución del Comité: ', bold: true }, { text: 'CT/ALIMENTACIÓN/046/2025 Fecha de la Resolución del Comité de Transparencia: 30/10/2025 ', bold: false },
                 { text: 'Fecha de la Resolución del Comité de Transparencia: ', bold: true }, { text: '--/--/2025.', bold: false, underline: true, newLine: true },
                 { text: 'Nombre del Área: ', bold: true }, { text: 'Gerencia Regional Occidente', bold: false, newLine: true },
                 { text: 'Motivación: ', bold: true }, { text: 'Se elaboró versión pública por contener datos personales concernientes a una persona física identificada o identificable, a fin de dar cumplimiento a las obligaciones de transparencia.', bold: false, newLine: true },
@@ -516,4 +516,5 @@
     </script>
 </body>
 </html>
+
 
