--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                 { text: 'SISTEMA DE PORTALES DE OBLIGACIONES DE TRANSPARENCIA (SIPOT)', bold: true, newLine: true },
                 { text: 'Información Confidencial', bold: false, newLine: true }, { text: '', bold: false, newLine: true },
                 { text: 'Eliminado: ', bold: true }, { text: `${count} datos personales. `, bold: false },
-                { text: 'Resolución del Comité: ', bold: true }, { text: 'CT/ALIMENTACIÓN/046/2025 Fecha de la Resolución del Comité de Transparencia: 30/10/2025 ', bold: false },
-                { text: 'Fecha de la Resolución del Comité de Transparencia: ', bold: true }, { text: '--/--/2025.', bold: false, underline: true, newLine: true },
+                { text: 'Resolución del Comité: ', bold: true }, { text: 'CT/ALIMENTACIÓN/046/2025', bold: false },
+                { text: 'Fecha de la Resolución del Comité de Transparencia: ', bold: true }, { text: '30/10/2025.', bold: false, underline: true, newLine: true },
                 { text: 'Nombre del Área: ', bold: true }, { text: 'Gerencia Regional Occidente', bold: false, newLine: true },
                 { text: 'Motivación: ', bold: true }, { text: 'Se elaboró versión pública por contener datos personales concernientes a una persona física identificada o identificable, a fin de dar cumplimiento a las obligaciones de transparencia.', bold: false, newLine: true },
                 { text: 'Fundamentación: ', bold: true }, { text: 'Artículos 103 fracción III, 115 y 120 de la Ley General de Transparencia y Acceso a la Información Pública y capítulo IX de los Lineamientos Generales en materia de Clasificación y Desclasificación de la Información, así como para la elaboración de versiones públicas vigentes.', bold: false, newLine: true },
@@ -516,5 +516,6 @@
     </script>
 </body>
 </html>
+
 
 
